PruebaIndent/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    WS

Grammar

Rule 0     S' -> file_input_end
Rule 1     file_input_end -> file_input ENDMARKER
Rule 2     file_input -> file_input NEWLINE
Rule 3     file_input -> file_input stmt
Rule 4     file_input -> NEWLINE
Rule 5     file_input -> stmt
Rule 6     funcdef -> DEF NAME parameters COLON suite
Rule 7     parameters -> LPAR RPAR
Rule 8     parameters -> LPAR varargslist RPAR
Rule 9     varargslist -> varargslist COMMA NAME
Rule 10    varargslist -> NAME
Rule 11    stmt -> simple_stmt
Rule 12    stmt -> compound_stmt
Rule 13    simple_stmt -> small_stmts NEWLINE
Rule 14    simple_stmt -> small_stmts SEMICOLON NEWLINE
Rule 15    small_stmts -> small_stmts SEMICOLON small_stmt
Rule 16    small_stmts -> small_stmt
Rule 17    small_stmt -> flow_stmt
Rule 18    small_stmt -> expr_stmt
Rule 19    expr_stmt -> testlist ASSIGN testlist
Rule 20    expr_stmt -> testlist
Rule 21    flow_stmt -> return_stmt
Rule 22    return_stmt -> RETURN testlist
Rule 23    compound_stmt -> if_stmt
Rule 24    compound_stmt -> funcdef
Rule 25    if_stmt -> IF test COLON suite
Rule 26    suite -> simple_stmt
Rule 27    suite -> NEWLINE INDENT stmts DEDENT
Rule 28    stmts -> stmts stmt
Rule 29    stmts -> stmt
Rule 30    comparison -> comparison PLUS comparison
Rule 31    comparison -> comparison MINUS comparison
Rule 32    comparison -> comparison MULT comparison
Rule 33    comparison -> comparison DIV comparison
Rule 34    comparison -> comparison LT comparison
Rule 35    comparison -> comparison EQ comparison
Rule 36    comparison -> comparison GT comparison
Rule 37    comparison -> PLUS comparison
Rule 38    comparison -> MINUS comparison
Rule 39    comparison -> power
Rule 40    power -> atom
Rule 41    power -> atom trailer
Rule 42    atom -> NAME
Rule 43    atom -> NUMBER
Rule 44    atom -> STRING
Rule 45    atom -> LPAR testlist RPAR
Rule 46    trailer -> LPAR arglist RPAR
Rule 47    testlist -> testlist_multi COMMA
Rule 48    testlist -> testlist_multi
Rule 49    testlist_multi -> testlist_multi COMMA test
Rule 50    testlist_multi -> test
Rule 51    test -> comparison
Rule 52    arglist -> arglist COMMA argument
Rule 53    arglist -> argument
Rule 54    argument -> test

Terminals, with rules where they appear

ASSIGN               : 19
COLON                : 6 25
COMMA                : 9 47 49 52
DEDENT               : 27
DEF                  : 6
DIV                  : 33
ENDMARKER            : 1
EQ                   : 35
GT                   : 36
IF                   : 25
INDENT               : 27
LPAR                 : 7 8 45 46
LT                   : 34
MINUS                : 31 38
MULT                 : 32
NAME                 : 6 9 10 42
NEWLINE              : 2 4 13 14 27
NUMBER               : 43
PLUS                 : 30 37
RETURN               : 22
RPAR                 : 7 8 45 46
SEMICOLON            : 14 15
STRING               : 44
WS                   : 
error                : 

Nonterminals, with rules where they appear

arglist              : 46 52
argument             : 52 53
atom                 : 40 41
comparison           : 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 38 51
compound_stmt        : 12
expr_stmt            : 18
file_input           : 1 2 3
file_input_end       : 0
flow_stmt            : 17
funcdef              : 24
if_stmt              : 23
parameters           : 6
power                : 39
return_stmt          : 21
simple_stmt          : 11 26
small_stmt           : 15 16
small_stmts          : 13 14 15
stmt                 : 3 5 28 29
stmts                : 27 28
suite                : 6 25
test                 : 25 49 50 54
testlist             : 19 19 20 22 45
testlist_multi       : 47 48 49
trailer              : 41
varargslist          : 8 9

Parsing method: LALR

state 0

    (0) S' -> . file_input_end
    (1) file_input_end -> . file_input ENDMARKER
    (2) file_input -> . file_input NEWLINE
    (3) file_input -> . file_input stmt
    (4) file_input -> . NEWLINE
    (5) file_input -> . stmt
    (11) stmt -> . simple_stmt
    (12) stmt -> . compound_stmt
    (13) simple_stmt -> . small_stmts NEWLINE
    (14) simple_stmt -> . small_stmts SEMICOLON NEWLINE
    (23) compound_stmt -> . if_stmt
    (24) compound_stmt -> . funcdef
    (15) small_stmts -> . small_stmts SEMICOLON small_stmt
    (16) small_stmts -> . small_stmt
    (25) if_stmt -> . IF test COLON suite
    (6) funcdef -> . DEF NAME parameters COLON suite
    (17) small_stmt -> . flow_stmt
    (18) small_stmt -> . expr_stmt
    (21) flow_stmt -> . return_stmt
    (19) expr_stmt -> . testlist ASSIGN testlist
    (20) expr_stmt -> . testlist
    (22) return_stmt -> . RETURN testlist
    (47) testlist -> . testlist_multi COMMA
    (48) testlist -> . testlist_multi
    (49) testlist_multi -> . testlist_multi COMMA test
    (50) testlist_multi -> . test
    (51) test -> . comparison
    (30) comparison -> . comparison PLUS comparison
    (31) comparison -> . comparison MINUS comparison
    (32) comparison -> . comparison MULT comparison
    (33) comparison -> . comparison DIV comparison
    (34) comparison -> . comparison LT comparison
    (35) comparison -> . comparison EQ comparison
    (36) comparison -> . comparison GT comparison
    (37) comparison -> . PLUS comparison
    (38) comparison -> . MINUS comparison
    (39) comparison -> . power
    (40) power -> . atom
    (41) power -> . atom trailer
    (42) atom -> . NAME
    (43) atom -> . NUMBER
    (44) atom -> . STRING
    (45) atom -> . LPAR testlist RPAR

    NEWLINE         shift and go to state 3
    IF              shift and go to state 11
    DEF             shift and go to state 13
    RETURN          shift and go to state 19
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    NAME            shift and go to state 14
    NUMBER          shift and go to state 26
    STRING          shift and go to state 27
    LPAR            shift and go to state 28

    file_input_end                 shift and go to state 1
    file_input                     shift and go to state 2
    stmt                           shift and go to state 4
    simple_stmt                    shift and go to state 5
    compound_stmt                  shift and go to state 6
    small_stmts                    shift and go to state 7
    if_stmt                        shift and go to state 8
    funcdef                        shift and go to state 9
    small_stmt                     shift and go to state 10
    test                           shift and go to state 12
    flow_stmt                      shift and go to state 15
    expr_stmt                      shift and go to state 16
    return_stmt                    shift and go to state 17
    testlist                       shift and go to state 18
    testlist_multi                 shift and go to state 20
    comparison                     shift and go to state 21
    power                          shift and go to state 24
    atom                           shift and go to state 25

state 1

    (0) S' -> file_input_end .



state 2

    (1) file_input_end -> file_input . ENDMARKER
    (2) file_input -> file_input . NEWLINE
    (3) file_input -> file_input . stmt
    (11) stmt -> . simple_stmt
    (12) stmt -> . compound_stmt
    (13) simple_stmt -> . small_stmts NEWLINE
    (14) simple_stmt -> . small_stmts SEMICOLON NEWLINE
    (23) compound_stmt -> . if_stmt
    (24) compound_stmt -> . funcdef
    (15) small_stmts -> . small_stmts SEMICOLON small_stmt
    (16) small_stmts -> . small_stmt
    (25) if_stmt -> . IF test COLON suite
    (6) funcdef -> . DEF NAME parameters COLON suite
    (17) small_stmt -> . flow_stmt
    (18) small_stmt -> . expr_stmt
    (21) flow_stmt -> . return_stmt
    (19) expr_stmt -> . testlist ASSIGN testlist
    (20) expr_stmt -> . testlist
    (22) return_stmt -> . RETURN testlist
    (47) testlist -> . testlist_multi COMMA
    (48) testlist -> . testlist_multi
    (49) testlist_multi -> . testlist_multi COMMA test
    (50) testlist_multi -> . test
    (51) test -> . comparison
    (30) comparison -> . comparison PLUS comparison
    (31) comparison -> . comparison MINUS comparison
    (32) comparison -> . comparison MULT comparison
    (33) comparison -> . comparison DIV comparison
    (34) comparison -> . comparison LT comparison
    (35) comparison -> . comparison EQ comparison
    (36) comparison -> . comparison GT comparison
    (37) comparison -> . PLUS comparison
    (38) comparison -> . MINUS comparison
    (39) comparison -> . power
    (40) power -> . atom
    (41) power -> . atom trailer
    (42) atom -> . NAME
    (43) atom -> . NUMBER
    (44) atom -> . STRING
    (45) atom -> . LPAR testlist RPAR

    ENDMARKER       shift and go to state 29
    NEWLINE         shift and go to state 30
    IF              shift and go to state 11
    DEF             shift and go to state 13
    RETURN          shift and go to state 19
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    NAME            shift and go to state 14
    NUMBER          shift and go to state 26
    STRING          shift and go to state 27
    LPAR            shift and go to state 28

    stmt                           shift and go to state 31
    simple_stmt                    shift and go to state 5
    compound_stmt                  shift and go to state 6
    small_stmts                    shift and go to state 7
    if_stmt                        shift and go to state 8
    funcdef                        shift and go to state 9
    small_stmt                     shift and go to state 10
    test                           shift and go to state 12
    flow_stmt                      shift and go to state 15
    expr_stmt                      shift and go to state 16
    return_stmt                    shift and go to state 17
    testlist                       shift and go to state 18
    testlist_multi                 shift and go to state 20
    comparison                     shift and go to state 21
    power                          shift and go to state 24
    atom                           shift and go to state 25

state 3

    (4) file_input -> NEWLINE .

    ENDMARKER       reduce using rule 4 (file_input -> NEWLINE .)
    NEWLINE         reduce using rule 4 (file_input -> NEWLINE .)
    IF              reduce using rule 4 (file_input -> NEWLINE .)
    DEF             reduce using rule 4 (file_input -> NEWLINE .)
    RETURN          reduce using rule 4 (file_input -> NEWLINE .)
    PLUS            reduce using rule 4 (file_input -> NEWLINE .)
    MINUS           reduce using rule 4 (file_input -> NEWLINE .)
    NAME            reduce using rule 4 (file_input -> NEWLINE .)
    NUMBER          reduce using rule 4 (file_input -> NEWLINE .)
    STRING          reduce using rule 4 (file_input -> NEWLINE .)
    LPAR            reduce using rule 4 (file_input -> NEWLINE .)


state 4

    (5) file_input -> stmt .

    ENDMARKER       reduce using rule 5 (file_input -> stmt .)
    NEWLINE         reduce using rule 5 (file_input -> stmt .)
    IF              reduce using rule 5 (file_input -> stmt .)
    DEF             reduce using rule 5 (file_input -> stmt .)
    RETURN          reduce using rule 5 (file_input -> stmt .)
    PLUS            reduce using rule 5 (file_input -> stmt .)
    MINUS           reduce using rule 5 (file_input -> stmt .)
    NAME            reduce using rule 5 (file_input -> stmt .)
    NUMBER          reduce using rule 5 (file_input -> stmt .)
    STRING          reduce using rule 5 (file_input -> stmt .)
    LPAR            reduce using rule 5 (file_input -> stmt .)


state 5

    (11) stmt -> simple_stmt .

    ENDMARKER       reduce using rule 11 (stmt -> simple_stmt .)
    NEWLINE         reduce using rule 11 (stmt -> simple_stmt .)
    IF              reduce using rule 11 (stmt -> simple_stmt .)
    DEF             reduce using rule 11 (stmt -> simple_stmt .)
    RETURN          reduce using rule 11 (stmt -> simple_stmt .)
    PLUS            reduce using rule 11 (stmt -> simple_stmt .)
    MINUS           reduce using rule 11 (stmt -> simple_stmt .)
    NAME            reduce using rule 11 (stmt -> simple_stmt .)
    NUMBER          reduce using rule 11 (stmt -> simple_stmt .)
    STRING          reduce using rule 11 (stmt -> simple_stmt .)
    LPAR            reduce using rule 11 (stmt -> simple_stmt .)
    DEDENT          reduce using rule 11 (stmt -> simple_stmt .)


state 6

    (12) stmt -> compound_stmt .

    ENDMARKER       reduce using rule 12 (stmt -> compound_stmt .)
    NEWLINE         reduce using rule 12 (stmt -> compound_stmt .)
    IF              reduce using rule 12 (stmt -> compound_stmt .)
    DEF             reduce using rule 12 (stmt -> compound_stmt .)
    RETURN          reduce using rule 12 (stmt -> compound_stmt .)
    PLUS            reduce using rule 12 (stmt -> compound_stmt .)
    MINUS           reduce using rule 12 (stmt -> compound_stmt .)
    NAME            reduce using rule 12 (stmt -> compound_stmt .)
    NUMBER          reduce using rule 12 (stmt -> compound_stmt .)
    STRING          reduce using rule 12 (stmt -> compound_stmt .)
    LPAR            reduce using rule 12 (stmt -> compound_stmt .)
    DEDENT          reduce using rule 12 (stmt -> compound_stmt .)


state 7

    (13) simple_stmt -> small_stmts . NEWLINE
    (14) simple_stmt -> small_stmts . SEMICOLON NEWLINE
    (15) small_stmts -> small_stmts . SEMICOLON small_stmt

    NEWLINE         shift and go to state 32
    SEMICOLON       shift and go to state 33


state 8

    (23) compound_stmt -> if_stmt .

    ENDMARKER       reduce using rule 23 (compound_stmt -> if_stmt .)
    NEWLINE         reduce using rule 23 (compound_stmt -> if_stmt .)
    IF              reduce using rule 23 (compound_stmt -> if_stmt .)
    DEF             reduce using rule 23 (compound_stmt -> if_stmt .)
    RETURN          reduce using rule 23 (compound_stmt -> if_stmt .)
    PLUS            reduce using rule 23 (compound_stmt -> if_stmt .)
    MINUS           reduce using rule 23 (compound_stmt -> if_stmt .)
    NAME            reduce using rule 23 (compound_stmt -> if_stmt .)
    NUMBER          reduce using rule 23 (compound_stmt -> if_stmt .)
    STRING          reduce using rule 23 (compound_stmt -> if_stmt .)
    LPAR            reduce using rule 23 (compound_stmt -> if_stmt .)
    DEDENT          reduce using rule 23 (compound_stmt -> if_stmt .)


state 9

    (24) compound_stmt -> funcdef .

    ENDMARKER       reduce using rule 24 (compound_stmt -> funcdef .)
    NEWLINE         reduce using rule 24 (compound_stmt -> funcdef .)
    IF              reduce using rule 24 (compound_stmt -> funcdef .)
    DEF             reduce using rule 24 (compound_stmt -> funcdef .)
    RETURN          reduce using rule 24 (compound_stmt -> funcdef .)
    PLUS            reduce using rule 24 (compound_stmt -> funcdef .)
    MINUS           reduce using rule 24 (compound_stmt -> funcdef .)
    NAME            reduce using rule 24 (compound_stmt -> funcdef .)
    NUMBER          reduce using rule 24 (compound_stmt -> funcdef .)
    STRING          reduce using rule 24 (compound_stmt -> funcdef .)
    LPAR            reduce using rule 24 (compound_stmt -> funcdef .)
    DEDENT          reduce using rule 24 (compound_stmt -> funcdef .)


state 10

    (16) small_stmts -> small_stmt .

    NEWLINE         reduce using rule 16 (small_stmts -> small_stmt .)
    SEMICOLON       reduce using rule 16 (small_stmts -> small_stmt .)


state 11

    (25) if_stmt -> IF . test COLON suite
    (51) test -> . comparison
    (30) comparison -> . comparison PLUS comparison
    (31) comparison -> . comparison MINUS comparison
    (32) comparison -> . comparison MULT comparison
    (33) comparison -> . comparison DIV comparison
    (34) comparison -> . comparison LT comparison
    (35) comparison -> . comparison EQ comparison
    (36) comparison -> . comparison GT comparison
    (37) comparison -> . PLUS comparison
    (38) comparison -> . MINUS comparison
    (39) comparison -> . power
    (40) power -> . atom
    (41) power -> . atom trailer
    (42) atom -> . NAME
    (43) atom -> . NUMBER
    (44) atom -> . STRING
    (45) atom -> . LPAR testlist RPAR

    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    NAME            shift and go to state 14
    NUMBER          shift and go to state 26
    STRING          shift and go to state 27
    LPAR            shift and go to state 28

    test                           shift and go to state 34
    comparison                     shift and go to state 21
    power                          shift and go to state 24
    atom                           shift and go to state 25

state 12

    (50) testlist_multi -> test .

    COMMA           reduce using rule 50 (testlist_multi -> test .)
    ASSIGN          reduce using rule 50 (testlist_multi -> test .)
    NEWLINE         reduce using rule 50 (testlist_multi -> test .)
    SEMICOLON       reduce using rule 50 (testlist_multi -> test .)
    RPAR            reduce using rule 50 (testlist_multi -> test .)


state 13

    (6) funcdef -> DEF . NAME parameters COLON suite

    NAME            shift and go to state 35


state 14

    (42) atom -> NAME .

    LPAR            reduce using rule 42 (atom -> NAME .)
    PLUS            reduce using rule 42 (atom -> NAME .)
    MINUS           reduce using rule 42 (atom -> NAME .)
    MULT            reduce using rule 42 (atom -> NAME .)
    DIV             reduce using rule 42 (atom -> NAME .)
    LT              reduce using rule 42 (atom -> NAME .)
    EQ              reduce using rule 42 (atom -> NAME .)
    GT              reduce using rule 42 (atom -> NAME .)
    COMMA           reduce using rule 42 (atom -> NAME .)
    ASSIGN          reduce using rule 42 (atom -> NAME .)
    NEWLINE         reduce using rule 42 (atom -> NAME .)
    SEMICOLON       reduce using rule 42 (atom -> NAME .)
    COLON           reduce using rule 42 (atom -> NAME .)
    RPAR            reduce using rule 42 (atom -> NAME .)


state 15

    (17) small_stmt -> flow_stmt .

    NEWLINE         reduce using rule 17 (small_stmt -> flow_stmt .)
    SEMICOLON       reduce using rule 17 (small_stmt -> flow_stmt .)


state 16

    (18) small_stmt -> expr_stmt .

    NEWLINE         reduce using rule 18 (small_stmt -> expr_stmt .)
    SEMICOLON       reduce using rule 18 (small_stmt -> expr_stmt .)


state 17

    (21) flow_stmt -> return_stmt .

    NEWLINE         reduce using rule 21 (flow_stmt -> return_stmt .)
    SEMICOLON       reduce using rule 21 (flow_stmt -> return_stmt .)


state 18

    (19) expr_stmt -> testlist . ASSIGN testlist
    (20) expr_stmt -> testlist .

    ASSIGN          shift and go to state 36
    NEWLINE         reduce using rule 20 (expr_stmt -> testlist .)
    SEMICOLON       reduce using rule 20 (expr_stmt -> testlist .)


state 19

    (22) return_stmt -> RETURN . testlist
    (47) testlist -> . testlist_multi COMMA
    (48) testlist -> . testlist_multi
    (49) testlist_multi -> . testlist_multi COMMA test
    (50) testlist_multi -> . test
    (51) test -> . comparison
    (30) comparison -> . comparison PLUS comparison
    (31) comparison -> . comparison MINUS comparison
    (32) comparison -> . comparison MULT comparison
    (33) comparison -> . comparison DIV comparison
    (34) comparison -> . comparison LT comparison
    (35) comparison -> . comparison EQ comparison
    (36) comparison -> . comparison GT comparison
    (37) comparison -> . PLUS comparison
    (38) comparison -> . MINUS comparison
    (39) comparison -> . power
    (40) power -> . atom
    (41) power -> . atom trailer
    (42) atom -> . NAME
    (43) atom -> . NUMBER
    (44) atom -> . STRING
    (45) atom -> . LPAR testlist RPAR

    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    NAME            shift and go to state 14
    NUMBER          shift and go to state 26
    STRING          shift and go to state 27
    LPAR            shift and go to state 28

    testlist                       shift and go to state 37
    testlist_multi                 shift and go to state 20
    test                           shift and go to state 12
    comparison                     shift and go to state 21
    power                          shift and go to state 24
    atom                           shift and go to state 25

state 20

    (47) testlist -> testlist_multi . COMMA
    (48) testlist -> testlist_multi .
    (49) testlist_multi -> testlist_multi . COMMA test

    COMMA           shift and go to state 38
    ASSIGN          reduce using rule 48 (testlist -> testlist_multi .)
    NEWLINE         reduce using rule 48 (testlist -> testlist_multi .)
    SEMICOLON       reduce using rule 48 (testlist -> testlist_multi .)
    RPAR            reduce using rule 48 (testlist -> testlist_multi .)


state 21

    (51) test -> comparison .
    (30) comparison -> comparison . PLUS comparison
    (31) comparison -> comparison . MINUS comparison
    (32) comparison -> comparison . MULT comparison
    (33) comparison -> comparison . DIV comparison
    (34) comparison -> comparison . LT comparison
    (35) comparison -> comparison . EQ comparison
    (36) comparison -> comparison . GT comparison

    COMMA           reduce using rule 51 (test -> comparison .)
    ASSIGN          reduce using rule 51 (test -> comparison .)
    NEWLINE         reduce using rule 51 (test -> comparison .)
    SEMICOLON       reduce using rule 51 (test -> comparison .)
    COLON           reduce using rule 51 (test -> comparison .)
    RPAR            reduce using rule 51 (test -> comparison .)
    PLUS            shift and go to state 39
    MINUS           shift and go to state 40
    MULT            shift and go to state 41
    DIV             shift and go to state 42
    LT              shift and go to state 43
    EQ              shift and go to state 44
    GT              shift and go to state 45


state 22
